--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /* your code */
+table{
+	border-collapse:collapse;
+	width: 100%;
+	border-radius: 20px;
+}
+thead{
+	background-color: rgb(30,100,150);
+	color: white;
+}
+#body2 th{
+	background-color: lightgrey;
+}
+#body4 th{
+	background-color: lightgrey;
+}
